--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,39 +1,97 @@
 @use '../../constants/colors' as *;
 
 .modal {
-  height: 100vh;
-  width: 100vw;
-  background-color: rgba(0, 0, 0, 0.4);
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  opacity: 0;
-  pointer-events: none;
-  transition: 0.5s;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s;
 
-  .modalWrapper {
-    padding: 45px;
-    border-radius: 12px;
-    background-color: $WHITE;
+    .modalWrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+        padding: 45px;
+        border-radius: 12px;
+        background-color: $WHITE;
+        position: relative;
+        min-width: 500px;
 
-    .modalContent {
-      display: flex;
-      justify-content: center;
-      transform: scale(0.5);
-      transition: 0.4s all;
-      width: 20vw;
+        .modalContent {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            width: 100%;
+        }
 
-      &.active {
-        transform: scale(1);
-      }
+        .modalActions {
+            width: 100%;
+            align-items: center;
+            justify-content: center;
+            display: flex;
+            gap: 20px;
+
+            .btn {
+                padding: 16px 16px;
+                border-radius: 5px;
+                cursor: pointer;
+                font-size: 18px;
+                font-weight: 500;
+                transition: background-color 0.2s ease;
+
+
+                &.closeActionButton {
+                    border: 1px solid $GRAY_NEUTRAL;
+                    background: $WHITE;
+                    color: $GRAY_DARK;
+
+                    &:hover {
+                        background: $WHITE_SMOKE;
+                    }
+                }
+
+                &.submitActionButton {
+                    border: none;
+                    background: $BLUE_BASE;
+                    color: $WHITE;
+
+                    &:hover {
+                        background: $BLUE_DARK;
+                    }
+                }
+            }
+        }
+
+        .closeButton {
+            position: absolute;
+            top: 30px;
+            right: 30px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            font-size: 25px;
+            color: $GRAY_DARK;
+
+            &:hover {
+                color: $GRAY_MIDDLE;
+            }
+        }
+
+        .modalHeader {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 16px 24px;
+        }
     }
-  }
-
-  &.active {
-    opacity: 1;
-    pointer-events: all;
-  }
 }
+
+
+
