--- a/src/pages/Warehouses/Warehouses.module.scss
+++ b/src/pages/Warehouses/Warehouses.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: space-between;
   height: 100%;
-  width: 60%;
+  width: 1152px;
 
   .warehouseMain {
     width: 100%;
@@ -65,7 +65,7 @@
     align-items: center;
     justify-content: center;
     gap: 30px;
-    width: 80%;
+    width: 500px;
 
     button {
       width: 100%;
