Настройка удаления и редактирования

--- a/src/pages/Warehouses/Warehouses.module.scss
+++ b/src/pages/Warehouses/Warehouses.module.scss
@@ -55,6 +55,11 @@
             transition: 0.5s;
           }
         }
+          a {
+              text-decoration: none;
+              color: $BLACK;
+              font-size: 18px;
+          }
       }
     }
   }
