--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 20px;
     padding: 45px;
     border-radius: 12px;
     background-color: $WHITE;
@@ -39,6 +39,7 @@
       gap: 20px;
 
       .btn {
+        width: 100%;
         padding: 16px 16px;
         border-radius: 5px;
         cursor: pointer;
@@ -87,7 +88,6 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 16px 24px;
     }
   }
 }
