--- a/src/pages/ProductPage/Products.module.scss
+++ b/src/pages/ProductPage/Products.module.scss
@@ -1,7 +1,11 @@
+@use '../../constants/colors' as *;
+
 .productsContainer {
   width: 100%;
+  height: 100%;
   display: flex;
-  justify-content: start;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
 
   .productsMain {
@@ -9,7 +13,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     gap: 20px;
 
     .productsTitle {
@@ -31,6 +35,24 @@
         input {
           border-radius: 10px;
         }
+      }
+    }
+    .productsBlock {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+
+      .productsItem {
+        width: 100%;
+        background-color: $WHITE;
+        border-radius: 10px;
+        padding: 0 25px;
+        height: 70px;
+        display: flex;
+        align-items: center;
       }
     }
   }
